--- a/main.tex
+++ b/main.tex
@@ -63,8 +63,8 @@
 \titlehead{Master of Science in Engineering with Specialisation in Data Science}
 
 \subject{Master Thesis}
-\title[Deep-Learning-based Pattern Recognition and the Principle of Self Organization]{
-    Deep-Learning-based Pattern Recognition and the Principle of Self Organization
+\title[Deep-Learning-based Pattern Recognition and the Principle of Self Organisation]{
+    Deep-Learning-based Pattern Recognition and the Principle of Self Organisation
 }
 \subtitle{Incorporating Findings from Neuroscience about Natural Intelligence into Modern Deep Learning Architectures}
 
