work on future ;)

--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -105,29 +105,13 @@ Extending these one-dimensional object representations (``what does the object l
 In addition to this construction of multi-dimensional object representations, an understanding of the world's physics is also necessary. This second type of representation summarises knowledge that relates to all objects, for example, the earth's gravitational force, the fact that living beings cannot walk through solid materials such as walls, etc. The question that arises now is how such a system can be implemented. It is obvious that more than simply showing pictures and the corresponding labels is required to learn such complex relationships. At least three key elements are required:
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 \begin{description}
-	\item[The world] in which the agent lives must allow interactions. This allows the agent to learn representations better, for example through interactions, getting eference copies, and observations how the world behaves. This allows differences and similarities between objects to be identified, for example how two different objects behave when the same actions are applied to them. It also allows the agent to define what it does not yet know and to learn these things consciously (for example with an entropy-based loss function \sidecite{storck1995reinforcement}). This also means that a continuous input is necessary and the model cannot be trained with a sequence of random and independent images like many current vision models.
-	\item[The network architecture] must, to some extent, not only enable but encourage the capture of the world structure. Personally, I think that a multi-dimensional world model is helpful to store and relate the appearance, behaviour, transformation capabilities, abilities, etc. of each object as well as a second model to store general knowledge about the world. % Multi dimensional world model, per object appearance, transformation behaviour, abilities, feeling, smell, ...
-	\item[The learning algorithm] should take several things into account to learn a good world model. A key element seems to be that the learning algorithm decides itself what to learn (entropy-based on the knowledge in the world model). Furthermore, curriculum learning seems promising: for a high level of intelligence, an equally complex world must be available in order to be able to learn it. However, such worlds might be so complex that the agent is overwhelmed without a step-by-step complexation of the world\sidenote{this also applies to us humans: We have a prior knowledge through evolution, then our parents explain the world to us. In fact, we are not able to survive without proper support in the first years}.% continous learning, curriculum learning % LLM -> predicten next token -> predicten objects next state
+	\item[The world] in which the agent lives must allow interactions. This allows the agent to learn representations better; for example, getting visual observations together with efference copies allows an agent to understand how objects behave. Furthermore, such a world allows understanding differences and similarities between objects. It also allows the agent to define what it does not yet know and to learn these things consciously (for example, with an entropy-based loss function \sidecite{storck1995reinforcement}). Thus, continuous input is necessary. Training a model with a sequence of random and unrelated images is most likely not sufficient.
+	\item[The network architecture] must enable and encourage the capture of the world structure. I think that a multi-dimensional world model is helpful for storing and relating the appearance, behaviour, transformation capabilities, abilities, etc., of each object and a second model to store general knowledge about the world. Such a model allows for a multi-dimensional relationship between objects and a better understanding of them\sidenote{in a pure vision perception model, a division into the dimensions of appearance, behaviour during transformation and physics (e.g. the object is standing on the ground) would already be a massive step forward}.% Multi dimensional world model, per object appearance, transformation behaviour, abilities, feeling, smell, ...
+	\item[The learning algorithm] should consider several things to learn a good world model. A key element is that the learning algorithm decides what to learn (entropy based on the knowledge in the world model). Furthermore, curriculum learning seems promising: for a high level of intelligence, an equally complex world must be available in order to be able to learn it. However, such worlds might be so complex that the agent is overwhelmed without a step-by-step complexation of the world\sidenote{this also applies to humans: We have prior knowledge through evolution, and then our parents explain the world to us. In fact, we are not able to survive without proper support in the first years}.% continuous learning, curriculum learning % LLM -> predicten next token -> predicten objects next state
 \end{description}
 
+An intelligent system consists of several components: One very crucial component is the perception system. From today's point of view, this is the component that is best mastered, i.e. deep learning systems can capture useful patterns in high-dimensional data very well\sidenote{although there are things that need to be improved, c.f. \secref{future_3_stage}}. Around this system, a world model has to be created, which stores the understanding of the world. It is important that the agent learns to learn, i.e. finds out for itself what knowledge it lacks in the world model and acquires it from the real world. Such behaviour can be implemented by an entropy-based loss function \sidecite{storck1995reinforcement}. The second question is what knowledge is extracted from the world and stored in the world model (and thus implicitly defines what the agent learns). The knowledge stored in the world model should be multi-dimensional object information, as described in the first paragraph of this section, which provides a much richer understanding of the world than the current one-dimensional pixel representations. To get a real understanding of the world, interactions with the world and predictions of how the next state of the world looks seem to be very central\sidenote{for example, the simple task of predicting the next token of a text has led to the enormous capabilities of large language models}. A straightforward implementation is a roll-out (i.e. predict how the world looks like after applying some actions and comparing this to the real world after these actions have been applied) \sidecite{LeCun_AMI}, more advanced seem to be GFlowNetworks \sidecite{NEURIPS2021_e614f646}. After such predictions are learned, reversing this process, as in diffusion models, could be a first step towards casual reasoning. In diffusion models, one learns to map from a specific state (a concrete image) to a very general state (noise). This process is reversed, and over several steps, the model can build trajectories from noise to a sample through a combination of direct and random motions. If a similar concept is applied to the learned prediction of actions, it can be predicted which action combinations have led to the current world state.
 
-Furthermore, I think we often underestimate the amount of information that such a system has to learn. It is often argued that today's models are huge and see far more data than a human. However, this does not take into account, for example, that people receive a boost through curriculum learning from many other people (e.g. parents, siblings, relatives, teachers, trainers, colleagues, etc.). Moreover, these people in turn draw on tens of thousands of generations of previous knowledge. A certain amount of this knowledge is also implicitly pre-programmed through the structure of the nervous system. According to Darwin's theory, this goes back to the first living creatures that lived billions of years ago. Why is this relevant? I see it as a very critical link to the design of the world in which an agent lives: we humans often define a task for agents such as landing a spaceship (LunarLander from Open AI \sidecite{1606.01540}) and believe that the agent learns to control such a ship. We humans immediately realise that we have to activate the boost in the correct direction to balance the rocket and make it sink less quickly to the ground. But we already have this prior knowledge before we even play the game. For example, we know the physics of gravity and it seems logical to us that a spaceship sinks to the ground within the atmosphere, while mountains or stars do not. An AI agent, on the other hand, does not have this knowledge - this does not have to be bad by definition but can be seen as a knowledge gap that has to be learned. The question here is whether an understanding of this can ever be learned if the input is only a visual scene and the agent cannot experience this force itself. Or why should an agent ever understand that a spaceship looks like a spaceship and that it is being pulled towards the earth by gravity, and not just see a funny looking collection of pixels that happens to be moving downwards at a constant speed?
-In other words, we humans consider ourselves intelligent in the real 3D world we live in. But this intelligence is based on the fact that we are part of a huge population that has lived in this highly complex world for generations. Personally, I think it is questionable whether an agent can learn knowledge comparable to that of humans by interacting in a minimally simple world-simulation.
+However, all these ideas are very abstract and have emerged in the course of this work. The concretisation of these ideas could take years and, unfortunately, are out-of-scope of this thesis. However, I hope to be able to address such questions as concrete research topics soon, ideally in a similar constellation as in this Master's thesis.
 
-Assuming such a world exists. Then there is still the question how the design of a proper learning system looks like. An intelligent system consists of several components: One very crucial component is the perception system. From today's point of view, this is probably the component that is best mastered\sidenote{although there are undoubtedly things that need to be improved, c.f. \secref{future_3_stage}}. Around this system, a world-model has to be created, which stores the understanding about the world. One question is how this world-model can be created. It seems to be important that the agent learns to learn, i.e. finds out for itself what knowledge it lacks in the world model and acquires it from the real world. As mentioned, such behaviour can be implemented by an entropy-based loss function \cite{storck1995reinforcement}. This shifts the problem to the question of what knowledge is extracted from the world and stored in the world model (and thus implicitly defines what the agent learns). The knowledge stored in the world-model should be the multi-dimensional object information described in the first paragraph of this section, which provides a much richer understanding of the world than the current one-dimensional pixel representations. To get an actual understanding of the world, interactions with the world and prediction how the next state of the world look like seems to be very central\sidenote{for example, the simple task of predicting the next token of a text has led to the enormous capabilities of large language models}. A very simple implementation is a roll-out (i.e. predict how the world looks like after applying some actions and comparing this to the real world after these actions have been applied) \sidecite{LeCun_AMI}, more advanced seem to be GFlowNetworks \sidecite{NEURIPS2021_e614f646}. After such predictions are learned, I think that reversing this process as in diffusion models could help casual reasoning. In diffusion models, one learns to map from a specific state (a concrete image) to a very general state (noise). This process is reversed and over several steps, the model can build trajectories from noise to a sample through a combination of direct motion and random motion. If a similar concept is applied to the learned prediction of actions, then it can be predicted which action combinations have led to the current world state.
-
-However, all these ideas are very abstract and have emerged in the course of this work. The concretisation of these ideas could be a thesis in itself and, unfortunately, the elaboration of such ideas is out-of-scope of this thesis. However, I hope to be able to address such questions as concrete research topics in the near future, ideally in a similar constellation as in this Master's thesis.
