split math table

--- a/main.tex
+++ b/main.tex
@@ -121,7 +121,8 @@
 
     \let\cleardoublepage\bigskip
     \let\clearpage\bigskip
-
+	
+	\pagebreak  % TODO added because list of Figures almost fills entire page
     \listoftables
 
     %\afterpage{\blankpage}
